add: head style

--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,7 @@ body{
     height:1.25rem;
     width: 1.25rem;
 }
+#snake_playground .head{
+    background-color: white;
+}
 /* /snake_playground section */
